# Ai-Travel-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Assets/: AI_Powered_Travel_Itinerary_Planner_Report.docx
src/config/: config.py
